--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 	<meta charset="UTF-8">
 	<title>FIGMA | Макеты для верстки — Верстка страницы</title>
 	<meta name="description" content="Макет для верстки сайта был взял с телеграм канала FIGMA | Макеты для верстки">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/style_adaptive.css">
 </head>
 <body>
 
@@ -25,7 +30,245 @@
     <!-- Конец -->
 
     <div class="main">
-        В данном блоке размещается верстка
+        <div class="container">
+            <header>
+                <a class="header__logo" href=""><img src="" alt=""><img src="/img/topLogoPng.png" alt=""></a>
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li>
+                            <a href="#">Sounds</a>
+                        </li>
+                        <li>
+                            <a href="#">Skills</a>
+                        </li>
+                        <li>
+                            <a href="#">Plugins</a>
+                        </li>
+                        <li>
+                            <a href="#">Studio</a>
+                        </li>
+                        <li>
+                            <a href="#">Community</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Pricing</a>
+                        </li>
+                    </ul>
+                </nav>
+                <p class="header__login">Login</p>
+                <button class="header__btn" type="button">Sign up</button>
+                <div class="toggle_btn">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <div class="header__nav-dropdown">
+                    <nav class="header__nav-dd">
+                        <ul class="header__nav-list-dd">
+                            <li>
+                                <a href="#">Sounds</a>
+                            </li>
+                            <li>
+                                <a href="#">Skills</a>
+                            </li>
+                            <li>
+                                <a href="#">Plugins</a>
+                            </li>
+                            <li>
+                                <a href="#">Studio</a>
+                            </li>
+                            <li>
+                                <a href="#">Community</a>
+                            </li>
+                            <li>
+                                <a href="#">Blog</a>
+                            </li>
+                            <li>
+                                <a href="#">Pricing</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+            <main>
+                <section>
+                    <div class="blue_stripe">
+                        <p>🤘 Get free Sounds when you start a trial & 4 months off a Sounds+ annual plan.</p>
+                        <a href="#">Click here</a>
+                    </div>
+                    <div class="central-block">
+                        <div class="central-block-info">
+                            <h1>Step into the producer’s playground</h1>
+                            <p>Explore the world’s best sample library and an unmatched marketplace of plugins and DAWs.</p>
+                            <button type="button">Try free</button>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="sound-box box">
+                        <div class="sound-box__left">
+                            <p>SOUNDS</p>
+                            <p>A catalog so deep, it’s dangerous.</p>
+                            <p>Expertly created and curated samples in any style imaginable. Start swimming in sound.</p>
+                            <button type="button">Explore Sounds</button>
+                        </div>
+                        <div class="sound-box__right">
+                            <img src="/img/img1.png" alt="">
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="box-connected box">
+                        <div class="box-connected__left">
+                            <img src="/img/img2.png" alt="">
+                        </div>
+                        <div class="box-connected__right">
+                            <p>Connected Experience</p>
+                            <p>A workflow that actually flows.</p>
+                            <p>Preview samples in your track’s key and tempo, drag and drop sounds into your DAW, and organize your favorite samples, MIDI and presets in one place.</p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="box-gear box">
+                        <div class="box-gear__left">
+                            <p>Gear</p>
+                            <p>Build a drool-worthy studio, affordably.</p>
+                            <p>The industry’s top software, all in one place, on payment plans built to work for you.</p>
+                            <button type="button">Explore Gear</button>
+                        </div>
+                        <div class="box-gear__right">
+                            <img src="/img/img3.png" alt="">
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="box-tehnology box">
+                        <div class="box-tehnology__left">
+                            <img src="/img/img4.png" alt="">
+                        </div>
+                        <div class="box-tehnology__right">
+                            <p>Technology</p>
+                            <p>Crate dig without the dust.</p>
+                            <p>Our intelligent search tools help you discover sounds you would normally have to dig to find. Tech breaks the sweat, not you.</p>
+                            <button type="button">Discover CoSo</button>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="box-creators box">
+                        <p>What creators are saying about Splice</p>
+                        <div class="creators-cards">
+                            <div class="card">
+                                <img src="/img/foto1.png" alt="">
+                                <p>I can always find what I’m looking for on Splice, whether it’s the exact sound I want or just a bit of inspiration.</p>
+                                <p>Andrew Huang</p>
+                            </div>
+                            <div class="card">
+                                <img src="/img/photo2.png" alt="">
+                                <p>Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
+                                <p>KSHMR</p>
+                            </div>
+                            <div class="card">
+                                <img src="/img/photo3.png" alt="">
+                                <p>It’s been fun to dive into Splice’s creator community and explore tools that support my own creative process.</p>
+                                <p>Kesha Lee</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="try-splise box">
+                        <div>
+                            <p>Try Splice today</p>
+                            <button type="button">Start now</button>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="splise-info__box box">
+                        <div class="column-skils column">
+                            <p>Skills</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">Catalog</a></li>
+                            </ul>
+                            <p>Studio</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">About Splice Studio</a></li>
+                                <li><a href="#">Managing Your Production Library</a></li>
+                                <li><a href="#">Collaborating with Baewatch</a></li>
+                            </ul>
+                        </div>
+                        <div class="column-community column">
+                            <p>Community</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Ableton Live Projects</a></li>
+                                <li><a href="#">FL Studio Projects</a></li>
+                                <li><a href="#">Logic Pro X Projects</a></li>
+                                <li><a href="#">Garageband Projects</a></li>
+                                <li><a href="#">Remix Contests</a></li>
+                                <li><a href="#">Tiesto's Secrets</a></li>
+                            </ul>
+                        </div>
+                        <div class="column-sounds column">
+                            <p>Sounds</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">Catalog</a></li>
+                                <li><a href="#">How Jaus Uses Sounds</a></li>
+                                <li><a href="#">deadmau5's Chimaera</a></li>
+                                <li><a href="#">KSHMR Vol. 2</a></li>
+                            </ul>
+                        </div>
+                        <div class="column-plugins column">
+                            <p>Plugins</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Top VSTs</a></li>
+                                <li><a href="#">Serium</a></li>
+                                <li><a href="#">Rent to Own</a></li>
+                                <li><a href="#">Free Plugins</a></li>
+                                <li><a href="#">Top manufacturers</a></li>
+                            </ul>
+                        </div>
+                        <div class="column-beatmaker column">
+                            <p>Beatmaker</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Create Your Own Beat</a></li>
+                                <li><a href="#">Wakapella</a></li>
+                                <li><a href="#">Just Blaze</a></li>
+                            </ul>
+                        </div>
+                        <div class="column-blog column">
+                            <p>Blog</p>
+                            <ul class="footer-nav">
+                                <li><a href="#">Latest Posts</a></li>
+                                <li><a href="#">Using Soundtoys Decapitator</a></li>
+                                <li><a href="#">Mastering 101</a></li>
+                                <li><a href="#">Producing Future Beats</a></li>
+                                <li><a href="#">Belonging @ Splice</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            </main>
+            <footer>
+                <div class="box-footer box">
+                    <p>© 2022 Splice.com All Rights Reserved</p>
+                    <ul>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Jobs</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
+                    <a href="#"><img src="/img/logo_fb.png" alt="" class="logo-facebook"></a>
+                </div>
+            </footer>
+            <script src="js/scrypt.js"></script>
+        </div>
     </div>
 
 </body>
