--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="main">
         <div class="container">
             <header>
-                <a class="header__logo" href=""><img src="" alt=""><img src="/img/topLogoPng.png" alt=""></a>
+                <a class="header__logo" href=""><img src="" alt=""><img src="../img/topLogoPng.png" alt=""></a>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li>
