--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="main">
         <div class="container">
             <header>
-                <a class="header__logo" href=""><img src="" alt=""><img src="/img/topLogoPng.png" alt=""></a>
+                <a class="header__logo" href=""><img src="" alt=""><img src="./img/topLogoPng.png" alt=""></a>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li>
@@ -114,14 +114,14 @@
                             <button type="button">Explore Sounds</button>
                         </div>
                         <div class="sound-box__right">
-                            <img src="/img/img1.png" alt="">
+                            <img src="./img/img1.png" alt="">
                         </div>
                     </div>
                 </section>
                 <section>
                     <div class="box-connected box">
                         <div class="box-connected__left">
-                            <img src="/img/img2.png" alt="">
+                            <img src="./img/img2.png" alt="">
                         </div>
                         <div class="box-connected__right">
                             <p>Connected Experience</p>
@@ -139,14 +139,14 @@
                             <button type="button">Explore Gear</button>
                         </div>
                         <div class="box-gear__right">
-                            <img src="/img/img3.png" alt="">
+                            <img src="./img/img3.png" alt="">
                         </div>
                     </div>
                 </section>
                 <section>
                     <div class="box-tehnology box">
                         <div class="box-tehnology__left">
-                            <img src="/img/img4.png" alt="">
+                            <img src="./img/img4.png" alt="">
                         </div>
                         <div class="box-tehnology__right">
                             <p>Technology</p>
@@ -161,17 +161,17 @@
                         <p>What creators are saying about Splice</p>
                         <div class="creators-cards">
                             <div class="card">
-                                <img src="/img/foto1.png" alt="">
+                                <img src="./img/foto1.png" alt="">
                                 <p>I can always find what I’m looking for on Splice, whether it’s the exact sound I want or just a bit of inspiration.</p>
                                 <p>Andrew Huang</p>
                             </div>
                             <div class="card">
-                                <img src="/img/photo2.png" alt="">
+                                <img src="./img/photo2.png" alt="">
                                 <p>Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
                                 <p>KSHMR</p>
                             </div>
                             <div class="card">
-                                <img src="/img/photo3.png" alt="">
+                                <img src="./img/photo3.png" alt="">
                                 <p>It’s been fun to dive into Splice’s creator community and explore tools that support my own creative process.</p>
                                 <p>Kesha Lee</p>
                             </div>
@@ -264,7 +264,7 @@
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Help</a></li>
                     </ul>
-                    <a href="#"><img src="/img/logo_fb.png" alt="" class="logo-facebook"></a>
+                    <a href="#"><img src="./img/logo_fb.png" alt="" class="logo-facebook"></a>
                 </div>
             </footer>
             <script src="js/scrypt.js"></script>
