--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <!-- Конец -->
 
     <div class="main">
-        <div class="container">
             <header>
-                <a class="header__logo" href=""><img src="" alt=""><img src="./img/topLogoPng.png" alt=""></a>
+                <a class="header__logo" href=""><img src="" alt=""><img src="./image/topLogoPng.png" alt=""></a>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li>
@@ -106,74 +105,84 @@
                     </div>
                 </section>
                 <section>
-                    <div class="sound-box box">
-                        <div class="sound-box__left">
-                            <p>SOUNDS</p>
-                            <p>A catalog so deep, it’s dangerous.</p>
-                            <p>Expertly created and curated samples in any style imaginable. Start swimming in sound.</p>
-                            <button type="button">Explore Sounds</button>
-                        </div>
-                        <div class="sound-box__right">
-                            <img src="./img/img1.png" alt="">
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="box-connected box">
-                        <div class="box-connected__left">
-                            <img src="./img/img2.png" alt="">
-                        </div>
-                        <div class="box-connected__right">
-                            <p>Connected Experience</p>
-                            <p>A workflow that actually flows.</p>
-                            <p>Preview samples in your track’s key and tempo, drag and drop sounds into your DAW, and organize your favorite samples, MIDI and presets in one place.</p>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="box-gear box">
-                        <div class="box-gear__left">
-                            <p>Gear</p>
-                            <p>Build a drool-worthy studio, affordably.</p>
-                            <p>The industry’s top software, all in one place, on payment plans built to work for you.</p>
-                            <button type="button">Explore Gear</button>
-                        </div>
-                        <div class="box-gear__right">
-                            <img src="./img/img3.png" alt="">
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="box-tehnology box">
-                        <div class="box-tehnology__left">
-                            <img src="./img/img4.png" alt="">
-                        </div>
-                        <div class="box-tehnology__right">
-                            <p>Technology</p>
-                            <p>Crate dig without the dust.</p>
-                            <p>Our intelligent search tools help you discover sounds you would normally have to dig to find. Tech breaks the sweat, not you.</p>
-                            <button type="button">Discover CoSo</button>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="box-creators box">
-                        <p>What creators are saying about Splice</p>
-                        <div class="creators-cards">
-                            <div class="card">
-                                <img src="./img/foto1.png" alt="">
-                                <p>I can always find what I’m looking for on Splice, whether it’s the exact sound I want or just a bit of inspiration.</p>
-                                <p>Andrew Huang</p>
+                    <div class="container">
+                        <div class="sound-box box">
+                            <div class="sound-box__left">
+                                <p>SOUNDS</p>
+                                <p>A catalog so deep, it’s dangerous.</p>
+                                <p>Expertly created and curated samples in any style imaginable. Start swimming in sound.</p>
+                                <button type="button">Explore Sounds</button>
                             </div>
-                            <div class="card">
-                                <img src="./img/photo2.png" alt="">
-                                <p>Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
-                                <p>KSHMR</p>
+                            <div class="sound-box__right">
+                                <img src="./img/img1.png" alt="">
                             </div>
-                            <div class="card">
-                                <img src="./img/photo3.png" alt="">
-                                <p>It’s been fun to dive into Splice’s creator community and explore tools that support my own creative process.</p>
-                                <p>Kesha Lee</p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="box-connected box">
+                            <div class="box-connected__left">
+                                <img src="./image/img2.png" alt="">
+                            </div>
+                            <div class="box-connected__right">
+                                <p>Connected Experience</p>
+                                <p>A workflow that actually flows.</p>
+                                <p>Preview samples in your track’s key and tempo, drag and drop sounds into your DAW, and organize your favorite samples, MIDI and presets in one place.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="box-gear box">
+                            <div class="box-gear__left">
+                                <p>Gear</p>
+                                <p>Build a drool-worthy studio, affordably.</p>
+                                <p>The industry’s top software, all in one place, on payment plans built to work for you.</p>
+                                <button type="button">Explore Gear</button>
+                            </div>
+                            <div class="box-gear__right">
+                                <img src="./image/img3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="box-tehnology box">
+                            <div class="box-tehnology__left">
+                                <img src="./image/img4.png" alt="">
+                            </div>
+                            <div class="box-tehnology__right">
+                                <p>Technology</p>
+                                <p>Crate dig without the dust.</p>
+                                <p>Our intelligent search tools help you discover sounds you would normally have to dig to find. Tech breaks the sweat, not you.</p>
+                                <button type="button">Discover CoSo</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="box-creators box">
+                            <p>What creators are saying about Splice</p>
+                            <div class="creators-cards">
+                                <div class="card">
+                                    <img src="./image/foto1.png" alt="">
+                                    <p>I can always find what I’m looking for on Splice, whether it’s the exact sound I want or just a bit of inspiration.</p>
+                                    <p>Andrew Huang</p>
+                                </div>
+                                <div class="card">
+                                    <img src="./image/photo2.png" alt="">
+                                    <p>Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
+                                    <p>KSHMR</p>
+                                </div>
+                                <div class="card">
+                                    <img src="./image/photo3.png" alt="">
+                                    <p>It’s been fun to dive into Splice’s creator community and explore tools that support my own creative process.</p>
+                                    <p>Kesha Lee</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -187,88 +196,91 @@
                     </div>
                 </section>
                 <section>
-                    <div class="splise-info__box box">
-                        <div class="column-skils column">
-                            <p>Skills</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">Catalog</a></li>
-                            </ul>
-                            <p>Studio</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">About Splice Studio</a></li>
-                                <li><a href="#">Managing Your Production Library</a></li>
-                                <li><a href="#">Collaborating with Baewatch</a></li>
-                            </ul>
-                        </div>
-                        <div class="column-community column">
-                            <p>Community</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Ableton Live Projects</a></li>
-                                <li><a href="#">FL Studio Projects</a></li>
-                                <li><a href="#">Logic Pro X Projects</a></li>
-                                <li><a href="#">Garageband Projects</a></li>
-                                <li><a href="#">Remix Contests</a></li>
-                                <li><a href="#">Tiesto's Secrets</a></li>
-                            </ul>
-                        </div>
-                        <div class="column-sounds column">
-                            <p>Sounds</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">Catalog</a></li>
-                                <li><a href="#">How Jaus Uses Sounds</a></li>
-                                <li><a href="#">deadmau5's Chimaera</a></li>
-                                <li><a href="#">KSHMR Vol. 2</a></li>
-                            </ul>
-                        </div>
-                        <div class="column-plugins column">
-                            <p>Plugins</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Top VSTs</a></li>
-                                <li><a href="#">Serium</a></li>
-                                <li><a href="#">Rent to Own</a></li>
-                                <li><a href="#">Free Plugins</a></li>
-                                <li><a href="#">Top manufacturers</a></li>
-                            </ul>
-                        </div>
-                        <div class="column-beatmaker column">
-                            <p>Beatmaker</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Create Your Own Beat</a></li>
-                                <li><a href="#">Wakapella</a></li>
-                                <li><a href="#">Just Blaze</a></li>
-                            </ul>
-                        </div>
-                        <div class="column-blog column">
-                            <p>Blog</p>
-                            <ul class="footer-nav">
-                                <li><a href="#">Latest Posts</a></li>
-                                <li><a href="#">Using Soundtoys Decapitator</a></li>
-                                <li><a href="#">Mastering 101</a></li>
-                                <li><a href="#">Producing Future Beats</a></li>
-                                <li><a href="#">Belonging @ Splice</a></li>
-                            </ul>
+                    <div class="container">
+                        <div class="splise-info__box box">
+                            <div class="column-skils column">
+                                <p>Skills</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">Catalog</a></li>
+                                </ul>
+                                <p>Studio</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">About Splice Studio</a></li>
+                                    <li><a href="#">Managing Your Production Library</a></li>
+                                    <li><a href="#">Collaborating with Baewatch</a></li>
+                                </ul>
+                            </div>
+                            <div class="column-community column">
+                                <p>Community</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Ableton Live Projects</a></li>
+                                    <li><a href="#">FL Studio Projects</a></li>
+                                    <li><a href="#">Logic Pro X Projects</a></li>
+                                    <li><a href="#">Garageband Projects</a></li>
+                                    <li><a href="#">Remix Contests</a></li>
+                                    <li><a href="#">Tiesto's Secrets</a></li>
+                                </ul>
+                            </div>
+                            <div class="column-sounds column">
+                                <p>Sounds</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">Catalog</a></li>
+                                    <li><a href="#">How Jaus Uses Sounds</a></li>
+                                    <li><a href="#">deadmau5's Chimaera</a></li>
+                                    <li><a href="#">KSHMR Vol. 2</a></li>
+                                </ul>
+                            </div>
+                            <div class="column-plugins column">
+                                <p>Plugins</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Top VSTs</a></li>
+                                    <li><a href="#">Serium</a></li>
+                                    <li><a href="#">Rent to Own</a></li>
+                                    <li><a href="#">Free Plugins</a></li>
+                                    <li><a href="#">Top manufacturers</a></li>
+                                </ul>
+                            </div>
+                            <div class="column-beatmaker column">
+                                <p>Beatmaker</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Create Your Own Beat</a></li>
+                                    <li><a href="#">Wakapella</a></li>
+                                    <li><a href="#">Just Blaze</a></li>
+                                </ul>
+                            </div>
+                            <div class="column-blog column">
+                                <p>Blog</p>
+                                <ul class="footer-nav">
+                                    <li><a href="#">Latest Posts</a></li>
+                                    <li><a href="#">Using Soundtoys Decapitator</a></li>
+                                    <li><a href="#">Mastering 101</a></li>
+                                    <li><a href="#">Producing Future Beats</a></li>
+                                    <li><a href="#">Belonging @ Splice</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </section>
             </main>
             <footer>
-                <div class="box-footer box">
-                    <p>© 2022 Splice.com All Rights Reserved</p>
-                    <ul>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Jobs</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                    <a href="#"><img src="./img/logo_fb.png" alt="" class="logo-facebook"></a>
+                <div class="container">
+                    <div class="box-footer box">
+                        <p>© 2022 Splice.com All Rights Reserved</p>
+                        <ul>
+                            <li><a href="#">Terms of Use</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Jobs</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Help</a></li>
+                        </ul>
+                        <a href="#"><img src="./img/logo_fb.png" alt="" class="logo-facebook"></a>
+                    </div>
                 </div>
             </footer>
-            <script src="js/scrypt.js"></script>
-        </div>
+            <script src="./scrypt/scrypt.js"></script>
     </div>
 
 </body>
