--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="main">
             <header>
-                <a class="header__logo" href=""><img src="" alt=""><img src="./image/topLogoPng.png" alt=""></a>
+                <a class="header__logo" href=""><img src="" alt=""><img src="./img/topLogoPng.png" alt=""></a>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li>
@@ -123,7 +123,7 @@
                     <div class="container">
                         <div class="box-connected box">
                             <div class="box-connected__left">
-                                <img src="./image/img2.png" alt="">
+                                <img src="./img/img2.png" alt="">
                             </div>
                             <div class="box-connected__right">
                                 <p>Connected Experience</p>
@@ -143,7 +143,7 @@
                                 <button type="button">Explore Gear</button>
                             </div>
                             <div class="box-gear__right">
-                                <img src="./image/img3.png" alt="">
+                                <img src="./img/img3.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                     <div class="container">
                         <div class="box-tehnology box">
                             <div class="box-tehnology__left">
-                                <img src="./image/img4.png" alt="">
+                                <img src="./img/img4.png" alt="">
                             </div>
                             <div class="box-tehnology__right">
                                 <p>Technology</p>
@@ -169,17 +169,17 @@
                             <p>What creators are saying about Splice</p>
                             <div class="creators-cards">
                                 <div class="card">
-                                    <img src="./image/foto1.png" alt="">
+                                    <img src="./img/foto1.png" alt="">
                                     <p>I can always find what I’m looking for on Splice, whether it’s the exact sound I want or just a bit of inspiration.</p>
                                     <p>Andrew Huang</p>
                                 </div>
                                 <div class="card">
-                                    <img src="./image/photo2.png" alt="">
+                                    <img src="./img/photo2.png" alt="">
                                     <p>Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.</p>
                                     <p>KSHMR</p>
                                 </div>
                                 <div class="card">
-                                    <img src="./image/photo3.png" alt="">
+                                    <img src="./img/photo3.png" alt="">
                                     <p>It’s been fun to dive into Splice’s creator community and explore tools that support my own creative process.</p>
                                     <p>Kesha Lee</p>
                                 </div>
