--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </li>
                     </ul>
                 </nav>
-                <p class="header__login">Login</p>
+                <a href="#" class="header__login">Login</a>
                 <button class="header__btn" type="button">Sign up</button>
                 <div class="toggle_btn">
                     <i class="fa-solid fa-bars"></i>
