--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     </div>
                 </div>
             </footer>
-            <script src="./scrypt/scrypt.js"></script>
+            <script src="./js/scrypt.js"></script>
     </div>
 
 </body>
